@@ -15,7 +15,7 @@ types (including the DNSSEC types), and unknown types.  It can be used for
 queries, zone transfers, and dynamic updates.  It includes a cache which can be
 used by clients, and an authoritative only server.  It supports TSIG
 authenticated messages, partial DNSSEC verification, and EDNS0.  It is fully
-thread safe.
+thread safe.  It can be used to replace the native DNS support in Java.
 
 dnsjava was started as an excuse to learn Java.  It was useful for testing new
 features in BIND without rewriting the C resolver.  It was then cleaned up and
@@ -34,6 +34,18 @@ To compile dnssec support (org.xbill.DNS.security), the Java Cryptography
 Extensions are required.  Run 'make dnssec' or 'ant dnssec' to compile this
 package.  TSIG support is separate from dnssec support, and does not require
 that dnssec support be built.
+
+
+Replacing the standard Java DNS functionality:
+
+Beginning with Java 1.4, service providers can be loaded at runtime.  To load
+the dnsjava service provider, set the system property:
+
+	sun.net.spi.nameservice.provider.1=dns,dnsjava
+
+This instructs the JVM to use the dnsjava service provide for DNS at the
+highest priority.
+	
 
 Limitations:
 
@@ -72,7 +84,7 @@ License:
 dnsjava is placed under the BSD license.  Several files are also under
 additional licenses; see the individual files for details.
 
-Copyright (c) 1999-2003, Brian Wellington
+Copyright (c) 1999-2005, Brian Wellington
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -104,4 +116,5 @@ Final notes:
  - Thanks to Network Associates, Inc. for sponsoring some of the original
    dnsjava work in 1999-2000.
 
- - Thanks to Nominum, Inc. for sponsoring some work on dnsjava from 2000-2003.
+ - Thanks to Nominum, Inc. for sponsoring some work on dnsjava from 2000 to
+   the present.
